--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,23 @@ a {
 * {
   box-sizing: border-box;
 }
+
+button,
+input {
+  margin: 5px 2px;
+}
+
+.container {
+  width: 100%;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
